# lab8

./: .coveralls.yml  .dockerignore  .gitignore  CMakeLists.txt  CPackConfig.cmake  Dockerfile  LICENSE  README.md  appveyor.yml  test.cpp
.github/workflows/: build.yml  ci.yml  docker-build.yml  release.yml
_logs/polly/clang-cxx14/: log.txt
_logs/polly/default/: log-0.txt  log-1.txt  log.txt
banking/: Account.cpp  Account.hpp  CMakeLists.txt  Transaction.cpp  Transaction.hpp
formatter_ex_lib/: CMakeLists.txt
formatter_lib/: CMakeLists.txt
hello_world_application/: CMakeLists.txt
solver_application/: CMakeLists.txt
solver_lib/: CMakeLists.txt  solver.cpp
sources/: print.cpp
tests/: CMakeLists.txt  test_account.cpp  test_print.cpp  test_transaction.cpp
